[NEXUS-8204] Removes second 'x' from input boxes in IE10/11

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
@@ -40,3 +40,11 @@
 .nx-clear-both {
   clear: both;
 }
+
+/**
+ * IE10 adds a second 'x' icon to text fields. Hide this.
+ */
+::-ms-clear {
+  width: 0;
+  height: 0;
+}
