--- a/plugins/rapture/nexus-rapture-plugin/src/main/resources/org/sonatype/nexus/rapture/internal/index.vm
+++ b/plugins/rapture/nexus-rapture-plugin/src/main/resources/org/sonatype/nexus/rapture/internal/index.vm
@@ -19,9 +19,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="description" content="Sonatype Nexus"/>
-
-  ## force browser to behave, IE=edge seems to have issues on IE 11 setting stylesheets (maybe other shit too)
-  <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
   <link rel="icon" type="image/png" href="$raptureUrl/resources/favicon.png?$urlSuffix"/>
   <!--[if IE]>
