Trivial describe format change; adding http response status

--- a/plugins/basic/nexus-repository-httpbridge/src/main/resources/org/sonatype/nexus/repository/httpbridge/internal/describe/describe.vm
+++ b/plugins/basic/nexus-repository-httpbridge/src/main/resources/org/sonatype/nexus/repository/httpbridge/internal/describe/describe.vm
@@ -29,7 +29,7 @@
       <table border="1" cellpadding="10">
         <thead>
         <tr>
-          <th>Key</th>
+          <th width="33%">Key</th>
           <th>Value</th>
         </tr>
         </thead>
