Restores background color for dev panel

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -199,7 +199,8 @@
 
   $ui-header-padding: 4px,
   $ui-header-color: $color-white,
-  $ui-header-background-color: $color-smalt
+  $ui-header-background-color: $color-smalt,
+  $ui-body-background-color: $color-white
 );
 
 .x-panel-nx-developer {
