--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/grid/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/grid/Panel.scss
@@ -11,3 +11,17 @@
   $ui-body-border-width: 0,
   $ui-padding: 5px 0 0 0
 );
+
+/**
+ * cls: 'nx-rowexpander'
+ */
+.nx-rowexpander {
+  padding: 5px;
+
+  tbody {
+    td:first-child {
+      padding-right: 5px;
+      font-weight: bold;
+    }
+  }
+}
