--- a/components/nexus-core/src/main/resources/static/css/nexus-error.css
+++ b/components/nexus-core/src/main/resources/static/css/nexus-error.css
@@ -17,18 +17,59 @@ body {
   padding: 0;
 }
 
-.nexus-error-message {
-  background-color: darkred;
+.nexus-header {
+  background-color: #000000;
   color: #ffffff;
-  padding: 10px;
-  font-size: larger;
+  padding: 4px 4px 4px 16px;
+  font-weight: 100;
 }
 
-.nexus-error-message img,
-.nexus-error-message span {
+.nexus-header img,
+.nexus-header span {
   vertical-align: middle;
 }
 
-.nexus-error-detail {
-  padding: 10px;
+.nexus-header .name {
+  font-size: 20px;
+  padding-left: 3px;
+}
+
+.nexus-header .version {
+  font-size: 10px;
+  padding-left: 4px;
+  font-weight: bold;
+  display: inline-block;
+  padding-top: 6px;
+}
+
+.nexus-body {
+  margin-left: auto;
+  margin-right: auto;
+  width: 940px;
+  padding-top: 20px;
+}
+
+.nexus-body img {
+  float: right;
+  margin-left: 10px;
+}
+
+.nexus-body .error-message {
+  font-weight: bold;
+}
+
+.nexus-body .error-message .code {
+  font-size: 26px;
+}
+
+.nexus-body .error-message .name {
+  font-size: 18px;
+  padding-left: 10px;
+  font-weight: normal;
+}
+
+.nexus-body .error-detail {
+  padding-top: 20px;
+  font-size: 13px;
+  line-height: 20px;
 }
