Change background color of drilldown messages to white

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -47,6 +47,7 @@
 .x-panel-nx-drilldown-message {
   padding-left: 8px !important;
   padding-right: 8px !important;
+  background-color: $color-white;
 
   .x-panel-header {
     padding: 8px;
