Force table headers to be left-aligned

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
@@ -106,6 +106,14 @@ p {
   margin-bottom: 1em;
 }
 
+/**
+ * Tables
+ */
+/* line 154, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
+th {
+  text-align: left;
+}
+
 /* including package rapture-theme */
 /**
  * @class Ext.Component
