Gives table cells a right padding for spacing

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
@@ -114,6 +114,16 @@ th {
   text-align: left;
 }
 
+/* line 158, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
+td {
+  padding-right: 5px;
+}
+
+/* line 162, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
+td:last-child {
+  padding-right: 0;
+}
+
 /* including package rapture-theme */
 /**
  * @class Ext.Component
@@ -24450,11 +24460,4 @@ a.x-color-picker-item:hover {
 .x-btn-nx-drilldown-medium-icon .x-btn-inner,
 .x-btn-nx-drilldown-medium-noicon .x-btn-inner {
   line-height: 24px;
-}
-
-/* line 360, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/button/Button.scss */
-.x-btn-nx-drilldown-medium-icon .x-btn-arrow-right .x-btn-inner,
-.x-btn-nx-drilldown-medium-noicon .x-btn-arrow-right .x-btn-inner,
-.x-btn-nx-drilldown-medium-icon-text-left .x-btn-arrow-right .x-btn-inner {
-  padding-right: 0;
 }
