NEXUS-8503 - Maven "Version policy" uneditable but shows as normal text field would
- styling rules for disabled combobox
- revert nx-no-border styling, one readonly styling to rule them all

Fixes #1270

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -155,10 +155,10 @@ th {
   text-align: left;
 }
 
-td {
+td:not([class|=x]) {
   padding-right: 5px;
 }
 
-td:last-child {
+td:not([class|=x]):last-child {
   padding-right: 0;
 }
