[NEXUS-8620] Do not disable readonly combos in the repo config UI
Fixes #1310

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
@@ -19,14 +19,11 @@
 }
 
 /**
-* editable = false on a combo sets readonly already, so use disabled to achieve the same effect
-*/
+  * editable = false on a combo sets readonly already, so use a custom class to achieve the same effect
+  */
 .nx-combo-disabled {
   input {
     @include nx-form-field-readonly;
-  }
-  .x-trigger-cell {
-    display: none;
   }
 }
 
