[NEXUS-8635] Do not apply opacity to picker labels when disabled
Fixes #1322

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_03.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_03.css
@@ -758,3 +758,11 @@
 .x-form-fieldcontainer.nx-invalid .nx-multiselect:nth-child(3) .x-panel-body {
   border: 1px #CF4C35 solid !important;
 }
+
+/**
+* @class Ext.ux.form.ItemSelector
+*/
+/* line 6, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/ItemSelector.scss */
+.nx-itemselector-disabled .x-form-item-label {
+  opacity: 1;
+}
