[NEXUS-7711] Make the index/describe pages consistent with the rest of the UI
Fixes #1269

--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/errorPageContentHtml.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/errorPageContentHtml.vm
@@ -24,8 +24,10 @@
 </head>
 <body>
 <div class="nexus-header">
-  <img src="$nexusRoot/static/images/nexus.png?$urlSuffix"/>
-  <span class="name">Sonatype Nexus</span>
+  <a href="$nexusRoot">
+    <img src="$nexusRoot/static/images/nexus.png?$urlSuffix"/>
+    <span class="name">Sonatype Nexus</span>
+  </a>
   <span class="version">$urlSuffix</span>
 </div>
 <div class="nexus-body">
