--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/accessDeniedHtml.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/accessDeniedHtml.vm
@@ -24,8 +24,10 @@
 </head>
 <body>
 <div class="nexus-header">
-  <img src="$nexusRoot/static/images/nexus.png?$nexusVersion"/>
-  <span class="name">Sonatype Nexus</span>
+  <a href="$nexusRoot">
+    <img src="$nexusRoot/static/images/nexus.png?$nexusVersion"/>
+    <span class="name">Sonatype Nexus</span>
+  </a>
   <span class="version">$nexusVersion</span>
 </div>
 <div class="nexus-body">
