Add nexusEdition for template rendering, normalize parameters (don't user urlSuffix as version, as it could change to not actually be a version, etc).

--- a/plugins/basic/nexus-repository-httpbridge/src/main/resources/org/sonatype/nexus/repository/httpbridge/internal/describe/describe.vm
+++ b/plugins/basic/nexus-repository-httpbridge/src/main/resources/org/sonatype/nexus/repository/httpbridge/internal/describe/describe.vm
@@ -52,7 +52,7 @@
     <img src="$nexusUrl/static/images/nexus.png?$nexusVersion"/>
     <span class="name">Sonatype Nexus</span>
   </a>
-  <span class="version">$nexusVersion</span>
+  <span class="version">$nexusEdition $nexusVersion</span>
 </div>
 
 <div class="nexus-describe-detail">
