--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/errorPageContentHtml.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/web/errorPageContentHtml.vm
@@ -28,7 +28,7 @@
     <img src="$nexusRoot/static/images/nexus.png?$urlSuffix"/>
     <span class="name">Sonatype Nexus</span>
   </a>
-  <span class="version">$urlSuffix</span>
+  <span class="version">$nexusEdition $nexusVersion</span>
 </div>
 <div class="nexus-body">
   <img src="$nexusRoot/static/images/robot.png?$urlSuffix"/>
