Drop old "item" feeds, and asset and component

--- a/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-cached.vm
+++ b/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-cached.vm
@@ -10,4 +10,4 @@
  * of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
  * Eclipse Foundation. All other trademarks are the property of their respective owners.
  *###
-Validation failed of $itemPath in repository $repoId ($repoName). Message: $validationMessage
+Cached $componentGroup:$componentName:$componentVersion in proxy cache $repoName. Initiated by $userId (IP=$userIp, UA=$userUa)
