--- a/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-deleted.vm
+++ b/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-deleted.vm
@@ -10,4 +10,4 @@
  * of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
  * Eclipse Foundation. All other trademarks are the property of their respective owners.
  *###
-Cached $itemPath in proxy repository $repoId ($repoName), originating from $itemRemoteUrl. Initiated by $userId (IP=$userIp, UA=$userUa)
+Deleted $componentGroup:$componentName:$componentVersion from repository $repoName. Initiated by $userId (IP=$userIp, UA=$userUa)
