--- a/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-deployed.vm
+++ b/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-component-deployed.vm
@@ -10,4 +10,4 @@
  * of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
  * Eclipse Foundation. All other trademarks are the property of their respective owners.
  *###
-Deleted $itemPath from repository $repoId ($repoName). Deleted by $userId (IP=$userIp, UA=$userUa)
+Deployed $componentGroup:$componentName:$componentVersion in hosted repository $repoName. Initiated by $userId (IP=$userIp, UA=$userUa)
