--- a/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-repo-created.vm
+++ b/plugins/basic/nexus-timeline-plugin/src/main/resources/org/sonatype/nexus/timeline/feeds/internal/plaintext-repo-created.vm
@@ -10,4 +10,4 @@
  * of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
  * Eclipse Foundation. All other trademarks are the property of their respective owners.
  *###
-Added repository $repoId ($repoName)
+Created repository $repoName (format: $repoFormat, type: $repoType)
