--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -11,8 +11,8 @@
   $ui-header-padding: 10px 8px 10px 10px,
   $ui-header-background-color: $color-white,
   $ui-body-background-color: $color-light-smoke,
-  $ui-header-icon-height: 32,
-  $ui-header-icon-width: 32,
+  $ui-header-icon-height: 32px,
+  $ui-header-icon-width: 32px,
   $ui-wrap-border-width: 0,
   $ui-header-text-transform: $panel-light-header-text-transform,
   $ui-tool-background-image: $panel-light-tool-background-image
