[NEXUS-8540] Add capability to set baseurl Refine details about forced base url Drop UI "General"

--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/app/baseurl-about.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/app/baseurl-about.vm
@@ -1,4 +1,4 @@
-/*
+#*
  * Sonatype Nexus (TM) Open Source Version
  * Copyright (c) 2008-2015 Sonatype, Inc.
  * All rights reserved. Includes the third-party code listed at http://links.sonatype.com/products/nexus/oss/attributions.
@@ -9,20 +9,9 @@
  * Sonatype Nexus (TM) Professional Version is available from Sonatype, Inc. "Sonatype" and "Sonatype Nexus" are trademarks
  * of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
  * Eclipse Foundation. All other trademarks are the property of their respective owners.
- */
-package org.sonatype.nexus.coreui
+ *###
+Specifiy the base URL used by the application server.
 
-import groovy.transform.ToString
-import org.hibernate.validator.constraints.URL
-
-/**
- * General System Settings exchange object.
- *
- * @since 3.0
- */
-@ToString(includePackage = false, includeNames = true)
-class GeneralSettingsXO
-{
-  @URL
-  String baseUrl
-}
+<p>
+  This value is used in cases where it otherwise can not be detected, or unless the value is forced.
+</p>
