--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/node/node.identity-about.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/node/node.identity-about.vm
@@ -18,5 +18,5 @@
 </p>
 <p>
   Removing and re-adding this capability will effectivly reset the server's identity.
-  This is an advanced operation and could negativly affect the stability of the server.
+  This is an advanced operation and could negatively affect the stability of the server.
 </p>
