Move styles out of the code and into the rapture theme

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
@@ -57,6 +57,13 @@
 }
 
 /**
+ * Styling for the boxlabel of form fields
+ */
+.x-field .nx-boxlabel {
+  font-size: $font-size-utility;
+}
+
+/**
  * IE10 adds a second 'x' icon to text fields. Hide this.
  */
 ::-ms-clear {
