[NEXUS-8973] Replace forcebaseurl capability with system property

--- a/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/app/baseurl-about.vm
+++ b/components/nexus-core/src/main/resources/org/sonatype/nexus/internal/app/baseurl-about.vm
@@ -13,5 +13,5 @@
 Specifiy the base URL used by the application server.
 
 <p>
-  This value is used in cases where it otherwise can not be detected, or unless the value is forced.
+  This value is used in cases where it otherwise can not be detected.
 </p>
